--- a/index.html
+++ b/index.html
@@ -306,7 +306,19 @@
                     </div>
                     <div>
                         <img src="/img/Avatar@2x.png" style=" margin-left: 70%;" width="18%" alt="">
-                       
+                        <p style="padding-top: 19%;">
+                            Lorem ipsum dolor sit amet, consectetur adipisifwcing elit,
+                             sed do eiusmod tempor incididunt ut labore et dolore roipi
+                             magna aliqua. Ut enim ad minim veeniam, quis nostruklad
+                             exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            Duis aute irure dolor in reprehenderit in tufpoy voluptate velit esse cillum
+                            dolore eu fugiat nulla parieratur. Excepteur sint occaecat cupidatat.
+                        </p>
+                        <hr style="color: #e27815; margin-top: 20%;border: 1px solid #e27815 ">
+                        <br>
+                        <br>
+                        <em>“Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
+                            mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem.”</em>
                     </div>
                 </div>
             </div>
