--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                  nonumy eirmod tempor invidunt ut labare et dolore magna aliquyam <br>
                  erat, sed diam voluptua. At vero</p>
         </div>
-        <img src="/img/user.png" alt="" style="margin-left: 40%; width: 20%;">
+        <img src="/img/user.png" alt="" style="margin-left: 50%; width: 10%; transform: translate(-50%);">
     </div>
     <div style="background-color: #24272E;">
         <h1 style="text-align: center;color: aliceblue; padding-top: 5%; margin-bottom: 1%;">Rencent Blog</h1>
