--- a/index.html
+++ b/index.html
@@ -119,47 +119,80 @@
             everything that your mind says.
         </p>
         <div class="our_clasess_gird">
-            <div class="item_clasess">
-                <img src="./img/boxer.png" alt="boxer" width="100%" height="100%">
-                <div class="txt_item_clasess">
-                    <a href="#">Advanced Gymanastic</a>
-                    <hr style=" border: 1px solid #FF1D6A;height: 1px;width: 20%; margin-left: 40%;">
-                </div>
-            </div>
-            <div class="item_clasess">
-                <img src="./img/woman4.png" alt="boxer" width="100%" height="100%">
-                <div class="txt_item_clasess">
-                    <a href="#">Advanced Gymanastic</a>
-                    <hr style=" border: 1px solid #FF1D6A;height: 1px;width: 20%; margin-left: 40%;">
-                </div>
-            </div>
-            <div class="item_clasess">
-                <img src="./img/mucula.png" alt="boxer" width="100%" height="100%">
-                <div class="txt_item_clasess">
-                    <a href="#">Advanced Gymanastic</a>
-                    <hr style=" border: 1px solid #FF1D6A;height: 1px;width: 20%; margin-left: 40%;">
-                </div>
-            </div>
-            <div class="item_clasess">
-                <img src="./img/woman3.png" alt="boxer" width="100%" height="100%">
-                <div class="txt_item_clasess">
-                    <a href="#">Advanced Gymanastic</a>
-                    <hr style=" border: 1px solid #FF1D6A;height: 1px;width: 20%; margin-left: 40%;">
-                </div>
-            </div>
-            <div class="item_clasess">
-                <img src="./img/woman5.png" alt="boxer" width="100%" height="100%">
-                <div class="txt_item_clasess">
-                    <a href="#">Advanced Gymanastic</a>
-                    <hr style=" border: 1px solid #FF1D6A;height: 1px;width: 20%; margin-left: 40%;">
-                </div>
-            </div>
-            <div class="item_clasess">
-                <img src="./img/woman2.png" alt="boxer" width="100%" height="100%">
-                <div class="txt_item_clasess">
-                    <a href="#">Advanced Gymanastic</a>
-                    <hr style=" border: 1px solid #FF1D6A;height: 1px;width: 20%; margin-left: 40%;">
-                </div>
+                <ul class="classes_list" id="classes">
+                    <li class="classes_list_item">
+                        <img src="img/boxer.png">
+                        <p class="classes_list_overview">Advanced Gymnastic</p>
+                        <hr>
+                        <section class="classes_hover">
+                            <h2 class="classes_hover_title">Advanced Gymnastic</h2>
+                            <p class="classes_hover_overview">
+                            If you run a fitness gym, this is one slogan that can bring customers in. No one likes having to drive miles out of their way to go to the gym.
+                            </p>
+                            <a href="#" class="classes_hover_link">Read More</a>
+                        </section>
+                    </li>
+                    <li class="classes_list_item">
+                        <img src="img/woman4.png">
+                        <p class="classes_list_overview">Advanced Gymnastic</p>
+                        <hr>
+                        <section class="classes_hover">
+                            <h3 class="classes_hover_title">Advanced Gymnastic</h3>
+                            <p class="classes_hover_overview">
+                            If you run a fitness gym, this is one slogan that can bring customers in. No one likes having to drive miles out of their way to go to the gym.
+                            </p>
+                            <a href="#" class="classes_hover_link">Read More</a>
+                        </section>
+                    </li>
+                    <li class="classes_list_item">
+                        <img src="img/mucula.png">
+                        <p class="classes_list_overview">Advanced Gymnastic</p>
+                        <hr>
+                        <section class="classes_hover">
+                            <h2 class="classes_hover_title">Advanced Gymnastic</h2>
+                            <p class="classes_hover_overview">
+                            If you run a fitness gym, this is one slogan that can bring customers in. No one likes having to drive miles out of their way to go to the gym.
+                            </p>
+                            <a href="#" class="classes_hover_link">Read More</a>
+                        </section>
+                    </li>
+                    <li class="classes_list_item">
+                        <img src="img/woman2.png">
+                        <p class="classes_list_overview">Advanced Gymnastic</p>
+                        <hr>
+                        <section class="classes_hover">
+                            <h2 class="classes_hover_title">Advanced Gymnastic</h2>
+                            <p class="classes_hover_overview">
+                            If you run a fitness gym, this is one slogan that can bring customers in. No one likes having to drive miles out of their way to go to the gym.
+                            </p>
+                            <a href="#" class="classes_hover_link">Read More</a>
+                        </section>
+                    </li>
+                    <li class="classes_list_item">
+                        <img src="img/woman5.png">
+                        <p class="classes_list_overview">Advanced Gymnastic</p>
+                        <hr>
+                        <section class="classes_hover">
+                            <h2 class="classes_hover_title">Advanced Gymnastic</h2>
+                            <p class="classes_hover_overview">
+                            If you run a fitness gym, this is one slogan that can bring customers in. No one likes having to drive miles out of their way to go to the gym.
+                            </p>
+                            <a href="#" class="classes_hover_link">Read More</a>
+                        </section>
+                    </li>
+                    <li class="classes_list_item">
+                        <img src="img/woman2.png">
+                        <p class="classes_list_overview">Advanced Gymnastic</p>
+                        <hr>
+                        <section class="classes_hover">
+                            <h2 class="classes_hover_title">Advanced Gymnastic</h2>
+                            <p class="classes_hover_overview">
+                            If you run a fitness gym, this is one slogan that can bring customers in. No one likes having to drive miles out of their way to go to the gym.
+                            </p>
+                            <a href="#" class="classes_hover_link">Read More</a>
+                        </section>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
@@ -201,8 +234,15 @@
                     </div>
                 </div>
             </div>
-            <div class="trainer_grid_slider">
-
+            <div class="trainer_grid_slider" >
+                <div class="owl-carousel owl-theme" id="slider_1">
+                    <img class="item" src="/img/bgr4.png" alt="" >
+                    <img class="item" src="./img/katlimine2.png"  alt="">
+                    <img class="item" src="./img/bgr5.png"  alt="">
+                    <img class="item" src="/img/bgr4.png" alt="" >
+                    <img class="item" src="./img/katlimine2.png"  alt="">
+                    <img class="item" src="./img/bgr5.png"  alt="">
+                </div> 
             </div>
         </div>
         <script src="js/owl.carousel.min.js"></script>
@@ -245,8 +285,8 @@
             <div class="blog_1">
                 <div class="blog_1_1">
                     <img src="/img/marathon.png" alt="" style="padding: auto;width: 100%;">
-                    <h2 style="color: #e27815;">This Havard Student Ran 10 Miles <br>
-                    Back to college</h2>
+                    <h3 style="color: #e27815;">This Havard Student Ran 10 Miles <br>
+                    Back to college</h3>
                     <p>
                         Exceteur sint occaecat cuoidatat non proident, sunt <br>
                         in culpa qui officia deserunt mollit anim id est eopksio <br>
@@ -262,8 +302,8 @@
                 </div>
                 <div class="blog_1_2">
                     <img src="/img/intensive-workout-with-kettlebell_1098-14426.png" alt="" style="padding: auto;width: 100%;">
-                    <h2 style="color: #e27815;">This Havard Student Ran 10 Miles <br>
-                    Back to college</h2>
+                    <h3 style="color: #e27815;">This Havard Student Ran 10 Miles <br>
+                    Back to college</h3>
                     <p>
                         Exceteur sint occaecat cuoidatat non proident, sunt <br>
                         in culpa qui officia deserunt mollit anim id est eopksio <br>
