--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="getstarted">
             <h1>Don't Stop Till<br>You Drop</h1>
-            <p style="padding: 2%;padding-bottom: 4%;">The best way to make sure you body and mind are ready for <br>work is to wake the up with a good workout</p>
+            <p style="padding: 2%;padding-bottom: 4%;font: Raleway; color:#BFBFBF;">The best way to <span style="color: #e27815;">make sure you body and mind</span>  are ready for <br>work is to wake the up with a good workout</p>
             <a href="#"class="btn1">GET STARTED NOW</a>
             <i class="fab fa-youtube" style="color: #FF1D6A;"></i>
             <a  href="#"class="btn2" >WHATCH REVIEWS</a>
@@ -60,16 +60,19 @@
             <div class="offer1">
                 <h3>BODY BULDING <br>CLASSES</h2>
                 <p>Trained under best trainers</p>
+                <br>
                 <a href="#"class="btn99">$99/M</a>
             </div>
             <div class="offer2">
                 <h3>BODY BULDING <br>CLASSES</h2>
                 <p>Trained under best trainers</p>
+                <br>
                 <a  href="#"class="btn99">$99/M</a>
             </div>
             <div class="offer3">
                 <h3>BODY BULDING <br>CLASSES</h2>
                 <p>Trained under best trainers</p>
+                <br>
                 <a href="#"class="btn99">$99/M</a>
             </div>
         </div>
@@ -84,7 +87,7 @@
             <p style="color: #e27815;">You body hears everythig that your mind says. you have to <br>
             have a positive attiude if you want to achieve your goals.</p>
             <br>
-            <p style="color: aliceblue;">If you run a fitness gym, this is one slogan that can bring <br>
+            <p >If you run a fitness gym, this is one slogan that can bring <br>
             customers in. No one likes having to drive miles out of their <br>
             way to go to the gym. It is always easier to have a gym that is <br>
             actually close to home. Your body hears everything that your <br>
@@ -114,7 +117,7 @@
         <h1 style="padding-bottom: 2%;">Our Clasess</h1>
         <hr style=" border: 1px solid #FF1D6A;width: 10%;margin-left: 45%;">
         <br>
-        <p>If you run a fitness gym, this is one slogan that can bring customers in. No one likes having to drive miles out <br>
+        <p style="color: #C8C8C8;">If you run a fitness gym, this is one slogan that can bring customers in. No one likes having to drive miles out <br>
             of their way to go to the gym. It is al ways easire to have a gym that is actually close to home. Your body hears <br>
             everything that your mind says.
         </p>
@@ -200,7 +203,7 @@
         <h1 style="text-align: center;padding: 2%; color:#ffff;">Our trainer</h1>
         <hr style=" border: 1px solid #FF1D6A;width: 10%;margin-left: 45%;">
         <br>
-        <p style="text-align: center;"> If you run a fitness gym, this is one slogan that can bring customers in. No one likes having to drive miles out <br>
+        <p style="text-align: center; color: #C8C8C8;"> If you run a fitness gym, this is one slogan that can bring customers in. No one likes having to drive miles out <br>
             of their way to go to the gym. It is al ways easire to have a gym that is actually close to home. Your body hears <br>
             everything that your mind says.
         </p>
@@ -208,11 +211,11 @@
             <div class="trainer_grid_txt">
                 <h2>Katlimine Core</h2>
                 <br>
-                <p>Fitness Intractor</p>
+                <p style="color: #C8C8C8;">Fitness Intractor</p>
                 <br>
                 <hr style=" border: 1px solid #FF1D6A;width: 30%;">
                 <br>
-                <p id="txt-kalimine">
+                <p id="txt-kalimine" style="color: #C8C8C8;">
                     Your body hears everything that your mind says. You have 
                     to have a positive attitude if you want to achieve your 
                     goals. If you run a fitness gym, this is one slogan that can 
@@ -266,15 +269,15 @@
         <hr style=" border: 1px solid #FF1D6A;width: 10%;margin-left: 45%;">
         <br>
         <div class="owl-carousel owl-theme" id="slider_3">
-                <p style="text-align: center;color: aliceblue; ">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam <br>
-                 nonumy eirmod tempor invidunt ut labare et dolore magna aliquyam <br>
-                 erat, sed diam voluptua. At vero</p>
-                <p style="text-align: center;color: aliceblue; ">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam <br>
-                 nonumy eirmod tempor invidunt ut labare et dolore magna aliquyam <br>
-                 erat, sed diam voluptua. At vero</p>
-                <p style="text-align: center;color: aliceblue; ">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam <br>
-                 nonumy eirmod tempor invidunt ut labare et dolore magna aliquyam <br>
-                 erat, sed diam voluptua. At vero</p>
+                <p style="text-align: center;font: Montserrat ">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam <br>
+                nonumy eirmod tempor invidunt ut labare et dolore magna aliquyam <br>
+                erat, sed diam voluptua. At vero</p>
+                <p style="text-align: center;font: Montserrat ">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam <br>
+                nonumy eirmod tempor invidunt ut labare et dolore magna aliquyam <br>
+                erat, sed diam voluptua. At vero</p>
+                <p style="text-align: center;font: Montserrat ">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam <br>
+                nonumy eirmod tempor invidunt ut labare et dolore magna aliquyam <br>
+                erat, sed diam voluptua. At vero</p>
         </div>
         <img src="/img/user.png" alt="" style="margin-left: 50%; width: 10%; transform: translate(-50%);">
     </div>
@@ -407,7 +410,7 @@
         <br>
 
     </div>
-    <div class="info_end">
+    <div class="info_end" style="color: #BBBBBB;">
         <div id="logo">
             <img src="/img/logo.png" alt="">
         </div>
