--- a/calculator/index.html
+++ b/calculator/index.html
@@ -12,17 +12,17 @@
   <div class="calculator">
 
     <div class="screen">
-      0
+      
     </div>
     <div class="buttons-container">
       <div class="button function ac">AC</div>
-      <div class="button function pm">±</div>
+      <div class="button function pm">+/-</div>
       <div class="button function percent">%</div>
       <div class="button operator division">÷</div>
       <div class="button number-7">7</div>
       <div class="button number-8">8</div>
       <div class="button number-9">9</div>
-      <div class="button operator multiplication">×</div>
+      <div class="button operator multiplication">x</div>
       <div class="button number-4">4</div>
       <div class="button number-5">5</div>
       <div class="button number-6">6</div>
