--- a/calculator/index.html
+++ b/calculator/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <div class="calculator">
-    <div class="screen">
-    </div>
+    <p class="screen">
+    </p>
     <div class="buttons-container">
       <div class="button function ac">AC</div>
       <div class="button function pm">+/-</div>
